# dotbot

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE.md  Makefile  README.md  easy_setup.sh  pyproject.toml  sample.conf.yaml  setup.cfg  setup.py  tox.ini
.ci/: check-changelog.py
.github/workflows/: build.yml  ci.yml  release.yml
dotbot/: __init__.py  cli.py  condition.py  config.py  context.py  dispatcher.py  plugin.py  tester.py
dotbot/conditions/: __init__.py  shell.py  tty.py
dotbot/executor/: __init__.py  cleaner.py  commandrunner.py  dirrer.py  executor.py  linker.py  meta.py
dotbot/messenger/: __init__.py  color.py  level.py  messenger.py
dotbot/plugins/: __init__.py  clean.py  conditional.py  copy.py  create.py  link.py  plugins.py  shell.py
dotbot/util/: __init__.py  common.py  compat.py  module.py  singleton.py  string.py
plugins/: clean.py  link.py  shell.py
src/dotbot/: __about__.py  __init__.py  cli.py  config.py  context.py  dispatcher.py  plugin.py
test/: .editorconfig  README.md  Vagrantfile  driver-lib.bash  test  test-lib.bash  test_clean.py  test_config.py  test_docker  test_link.py  test_shell.py  test_travis  utils.py
test/tests/: clean-default.bash  clean-environment-variable-expansion.bash  clean-missing.bash  clean-nonexistent.bash  clean-outside-force.bash  clean-outside.bash  clean-recursive.bash  config-blank.bash  config-empty.bash  config-json-tabs.bash  config-json.bash  config-ordered.bash  copy-create.bash  copy-files-and-dir.bash  copy-force.bash  create-mode.bash  create-relative.bash  create.bash  defaults.bash  except-multi.bash  (+41 more)
tests/: conftest.py  dotbot_plugin_config_file.py  dotbot_plugin_context_plugin.py  dotbot_plugin_counter.py  dotbot_plugin_directory.py  dotbot_plugin_dispatch.py  dotbot_plugin_dispatcher_no_plugins.py  dotbot_plugin_dry_run.py  dotbot_plugin_file.py  dotbot_plugin_issue_357.py  dotbot_plugin_raises.py  test_bin_dotbot.py  test_clean.py  test_cli.py  test_config.py  test_copy.py  test_create.py  test_dispatcher.py  test_link.py  test_noop.py  test_plugins.py  test_shell.py  test_shim.py
(+18 files in other folders)
